--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.3",
     "@vitejs/plugin-react-swc": "^4.0.0",
+    "connect-history-api-fallback": "^2.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
